# DICAPP

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  IMPORT_FIX.md  MIGRATIONS.md  PROGRESS.md  QUICKSTART.md  README.md  SETUP.md  SSR_DB_FIX.md  STATUS.md  package.json  pnpm-lock.yaml  vercel.json  vocab_words_fresh_sample_csv__preview_.csv  vocab_words_sample.csv
.claude/: settings.local.json
apps/desktop/: .env.example  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
apps/desktop/src/: app.css  app.d.ts  app.html  hooks.server.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/lib/: buildInfo.ts  config.ts  supabase.server.ts  supabase.ts  supabaseClient.ts
apps/desktop/src/lib/api/: fetchWithAuth.ts
apps/desktop/src/lib/components/: Card.svelte  GradeButtons.svelte  Header.svelte  NewDeckDialog.svelte
apps/desktop/src/lib/stores/: auth.ts  database.ts  deck.ts  scope.ts  settings.ts  study.ts
apps/desktop/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/desktop/src/routes/account/: +page.svelte
apps/desktop/src/routes/clinic/: +page.svelte
apps/desktop/src/routes/complete/: +page.svelte
apps/desktop/src/routes/decks/: +page.svelte
apps/desktop/src/routes/explore/: +page.svelte
apps/desktop/src/routes/import/: +page.svelte
apps/desktop/static/samples/: full-en-de-academic.csv  simple-en-de-a1.csv
scripts/: sample-deck.csv
seeds/: Full-EN-DE-Academic.csv  Kanji-Minimal.csv  Simple-EN-DE-A1.csv
supabase/: schema.sql  storage.sql
(+9 files in other folders)
